# simplemem-lite

./: .dockerignore  .env.example  .gitignore  .simplemem.yaml  BUG_REPORTS.md  Dockerfile  Dockerfile.combined  Dockerfile.local  GRAPH_REASONING_EVAL.md  IMPROVEMENTS.md  PLAN.md  PROGRESS.md  README.md  docker-compose.local.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  supervisord.conf
deploy/falkordb/: fly.toml
docs/: APPTAINER.md
hooks/: install.sh  session-start.sh  stop.sh
research/: graph_schema_analysis.md
simplemem_lite/: __init__.py  ast_chunker.py  bootstrap.py  cli.py  client.py  code_index.py  compression.py  config.py  daemon.py  daemon_manager.py  db.py  embeddings.py  extractors.py  job_manager.py  log_config.py  memory.py  projects.py  projects_utils.py  server.py  server_daemon.py  session_indexer.py  session_state.py  todo.py  token_reduction.py  toon.py  traces.py  watcher.py
simplemem_lite/backend/: __init__.py  app.py  config.py  main.py  scoring.py  services.py  time_utils.py  toon.py
simplemem_lite/backend/api/: __init__.py  admin.py  code.py  consolidation.py  graph.py  memories.py  projects.py  scratchpad.py  traces.py  unified.py
simplemem_lite/backend/consolidation/: __init__.py  candidates.py  executor.py  scheduler.py  scorer.py
simplemem_lite/db/: __init__.py  consolidation.py  entity_repository.py  falkor_backend.py  graph_analytics.py  graph_factory.py  graph_protocol.py  kuzu_backend.py  manager.py  memgraph_backend.py  relationship_manager.py
simplemem_lite/mcp/: __init__.py  client.py  launcher.py  local_reader.py  server.py  watcher_cloud.py
tests/: __init__.py  conftest.py  test_ask_codebase.py  test_ast_chunker.py  test_backend_api.py  test_code_embeddings.py  test_code_index.py  test_code_integration.py  test_config.py  test_contradiction_detection.py  test_db.py  test_e2e_trace_processing.py  test_extractors.py  test_graph_backends.py  test_graph_power_tools.py  test_historical_discovery.py  test_job_manager.py  test_mcp_client.py  test_mcp_launcher.py  test_mcp_local_reader.py  test_mcp_server.py  test_orphan_cleanup.py  test_project_id.py  test_projects.py  test_query_expansion.py  test_rate_limiter.py  test_reranking.py  test_security.py  test_server_di.py  test_session_indexer.py  test_session_state.py  test_statusline.py  test_sync_health.py  test_todo.py  test_todo_integration.py  test_token_reduction.py  test_unified_api.py
tests/benchmarks/: __init__.py  ab_harness.py  generate_temporal_dataset.py  llm_judge.py  metrics.py
tests/fixtures/consolidation/: graph_factories.py  llm_responses.json
tests/integration/: test_scratchpad_api.py
tests/integration/consolidation/: test_api.py  test_pipeline.py  test_review_workflow.py
tests/unit/: test_toon.py
tests/unit/consolidation/: test_candidates.py  test_executor.py  test_review_queue.py  test_scheduler.py  test_scorer.py
