[project]
name = "simplemem-lite"
version = "0.1.0"
description = "Minimal hybrid memory MCP server with Claude Code trace processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.15.0",
    "kuzu>=0.7.0",
    "litellm>=1.50.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
simplemem-lite = "simplemem_lite.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
