[project]
name = "simplemem-lite"
version = "0.1.0"
description = "Minimal hybrid memory MCP server with Claude Code trace processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.15.0",
    "kuzu>=0.7.0",
    "litellm>=1.50.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "json_repair>=0.30.0", # Robust JSON parsing for LLM outputs
    "watchdog>=4.0.0", # File system watcher for P3 auto-capture
    "pathspec>=0.12.1",
    "typer>=0.12.0",  # CLI framework
    "rich>=13.0.0",   # Beautiful terminal output
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
simplemem-lite = "simplemem_lite.server:main"
simplemem = "simplemem_lite.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
