[project]
name = "simplemem-lite"
version = "0.1.0"
description = "Minimal hybrid memory MCP server with Claude Code trace processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shimon Vainer"}
]
keywords = ["mcp", "memory", "claude", "ai", "vector-database", "graph-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.15.0",
    "kuzu>=0.7.0",
    "litellm>=1.50.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "json_repair>=0.30.0",
    "watchdog>=4.0.0",
    "pathspec>=0.12.1",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Backend API dependencies
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    # Token reduction dependencies
    "orjson>=3.10.0",
    "tiktoken>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/shimonvainer/simplemem"
Repository = "https://github.com/shimonvainer/simplemem"

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
]
falkordb = [
    "falkordb>=1.0.0",
]
memgraph = [
    "neo4j>=5.0.0",
]
# Code indexing with AST parsing and code-specific embeddings
code = [
    "tree-sitter>=0.21.0,<0.22.0",  # Pin to 0.21.x for tree-sitter-languages compatibility
    "tree-sitter-languages>=1.10.0",
    "voyageai>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
all = [
    "simplemem-lite[local,falkordb,memgraph,code,dev]",
]

[project.scripts]
simplemem-lite = "simplemem_lite.server:main"
simplemem = "simplemem_lite.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
